--- a/index.html
+++ b/index.html
@@ -1,4 +1,241 @@
-<!-- ... POTONGAN AWAL HTML TETAP ... -->
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <title>Undangan Pernikahan Fauzi & Liansky</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
+      color: #333;
+      background: #fff;
+    }
+
+    .background-1, .background-2, .background-3 {
+      background-size: cover;
+      background-position: center top;
+      background-attachment: scroll;
+      background-repeat: no-repeat;
+      background-color: #fff;
+    }
+
+    .background-1 {
+      background-image: url('background-1.jpg');
+    }
+    .background-2 {
+      background-image: url('background-2.jpg');
+    }
+    .background-3 {
+      background-image: url('background-3.jpg');
+    }
+
+    .container {
+      max-width: 700px;
+      margin: auto;
+      padding: 24px;
+      background: rgba(255, 255, 255, 0.6);
+      border-radius: 16px;
+      box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
+    }
+
+    h1, h2, h3 {
+      text-align: center;
+      margin-bottom: 8px;
+    }
+
+    .dynamic-title {
+      font-size: 32px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 8px;
+      flex-wrap: wrap;
+    }
+    .dynamic-title span {
+      font-weight: 600;
+    }
+    .dynamic-title .amp {
+      font-size: 52px;
+      line-height: 1;
+    }
+
+    .countdown {
+      font-size: 20px;
+      text-align: center;
+      margin: 16px 0;
+      font-weight: bold;
+    }
+
+    .section {
+      margin: 32px 0;
+    }
+
+    .photo, .qr {
+      text-align: center;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 12px;
+    }
+
+    .button {
+      display: block;
+      width: fit-content;
+      margin: 12px auto;
+      padding: 14px 24px;
+      background: #444;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      font-size: 16px;
+    }
+
+    .qr img {
+      width: 180px;
+      margin: 10px;
+      border-radius: 8px;
+    }
+
+    p {
+      line-height: 1.6;
+    }
+
+    a {
+      color: #0066cc;
+    }
+
+    .entry {
+      background: #f7f7f7;
+      padding: 12px;
+      margin: 8px 0;
+      border-radius: 8px;
+    }
+
+    #pagination button {
+      margin: 8px;
+      padding: 8px 16px;
+      font-size: 14px;
+    }
+
+    input, textarea, select {
+      display: block;
+      width: 100%;
+      max-width: 100%;
+      box-sizing: border-box;
+      margin: 8px 0;
+      padding: 10px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+
+    button[type="submit"] {
+      padding: 10px 20px;
+      background-color: #444;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    #music-toggle {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      z-index: 1000;
+      background: rgba(255,255,255,0.7);
+      border: none;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      font-size: 18px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+  <audio id="bg-music" autoplay loop>
+    <source src="musik-latar.mp3" type="audio/mpeg">
+  </audio>
+  <button id="music-toggle">🔊</button>
+
+  <div class="background-1">
+    <div class="container">
+      <h1 class="dynamic-title">
+        <span>Fauzi</span>
+        <span class="amp">&</span>
+        <span>Liansky</span>
+      </h1>
+      <h3>Pernikahan - 27 Juli 2025</h3>
+      <div class="countdown" id="countdown">Menghitung waktu...</div>
+    </div>
+  </div>
+
+  <div class="background-2">
+    <div class="container">
+      <div class="section">
+        <h2>Undangan</h2>
+        <p>Dengan penuh kebahagiaan, kami mengundang Bapak/Ibu/Saudara/i untuk hadir dalam acara pernikahan kami:</p>
+
+        <h3>Akad Nikah</h3>
+        <p>Minggu, 27 Juli 2025<br>07.00 – 09.00 WIB<br><strong>Masjid Baiturrahman Pondok Pinang</strong><br><a href="https://maps.app.goo.gl/BbcKU5Lmzu8Tw4wJ7" target="_blank">Lihat Lokasi</a></p>
+
+        <h3>Resepsi Sesi 1</h3>
+        <p>10.00 – 12.00 WIB<br><strong>Rumah Fauzi - Jl. Contoh Alamat No. 123</strong></p>
+
+        <h3>Resepsi Sesi 2</h3>
+        <p>13.00 – 15.00 WIB<br><strong>Rumah Fauzi - Jl. Contoh Alamat No. 123</strong></p>
+
+        <p><strong>Catatan:</strong> Harap <em>lepas sepatu</em> sebelum memasuki area acara.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="background-3">
+    <div class="container">
+      <div class="section">
+        <h2>Konfirmasi Kehadiran (RSVP)</h2>
+        <form id="rsvpForm">
+          <input type="text" id="rsvpNama" placeholder="Nama Anda" required>
+          <select id="rsvpStatus">
+            <option value="Hadir">Hadir</option>
+            <option value="Tidak Hadir">Tidak Hadir</option>
+          </select>
+          <input type="number" id="rsvpJumlah" placeholder="Jumlah Orang" required>
+          <button type="submit">Kirim</button>
+        </form>
+      </div>
+
+      <div class="section">
+        <h2>Ucapan & Doa</h2>
+        <form id="wishForm">
+          <input type="text" id="wishNama" placeholder="Nama Anda" required>
+          <textarea id="wishPesan" rows="3" placeholder="Ucapan dan Doa" required></textarea>
+          <button type="submit">Kirim</button>
+        </form>
+        <div id="wishList"></div>
+        <div id="pagination"></div>
+      </div>
+
+      <div class="section">
+        <h2>Hadiah</h2>
+        <p>Silakan kunjungi daftar kado kami di link berikut:</p>
+        <a href="https://www.giftster.com/list/Z7Ogt/" target="_blank" class="button">Lihat Gift List</a>
+        <p>Atau kirim melalui QR berikut:</p>
+        <div class="qr">
+          <p>QR Code Fauzi</p>
+          <img src="qr-fauzi.png" alt="QR Code Fauzi">
+          <p>QR Code Liansky</p>
+          <img src="qr-liansky.png" alt="QR Code Liansky">
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script>
     const bgMusic = document.getElementById("bg-music");
@@ -25,69 +262,6 @@
       const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
       countdownElement.textContent = `${weeks} minggu ${days} hari ${hours} jam`;
     }, 1000);
-
-    // Firebase Config
-    const firebaseConfig = {
-      apiKey: "ISI_API_KEY_ANDA",
-      authDomain: "fauzi-cacha.firebaseapp.com",
-      databaseURL: "https://fauzi-cacha-default-rtdb.asia-southeast1.firebasedatabase.app",
-      projectId: "fauzi-cacha",
-      storageBucket: "fauzi-cacha.appspot.com",
-      messagingSenderId: "ISI_MESSAGING_SENDER_ID",
-      appId: "ISI_APP_ID"
-    };
-
-    firebase.initializeApp(firebaseConfig);
-    const database = firebase.database();
-
-    // Simpan RSVP ke Firebase
-    document.getElementById("rsvpForm").addEventListener("submit", function (e) {
-      e.preventDefault();
-      const nama = document.getElementById("rsvpNama").value;
-      const status = document.getElementById("rsvpStatus").value;
-      const jumlah = document.getElementById("rsvpJumlah").value;
-
-      database.ref("rsvp").push({
-        nama: nama,
-        status: status,
-        jumlah: jumlah,
-        timestamp: Date.now()
-      });
-
-      alert("Terima kasih atas konfirmasinya!");
-      this.reset();
-    });
-
-    // Simpan Ucapan ke Firebase
-    document.getElementById("wishForm").addEventListener("submit", function (e) {
-      e.preventDefault();
-      const nama = document.getElementById("wishNama").value;
-      const pesan = document.getElementById("wishPesan").value;
-
-      database.ref("ucapan").push({
-        nama: nama,
-        pesan: pesan,
-        timestamp: Date.now()
-      });
-
-      alert("Ucapan berhasil dikirim!");
-      this.reset();
-    });
-
-    // Tampilkan daftar ucapan
-    const wishList = document.getElementById("wishList");
-    database.ref("ucapan").on("value", function (snapshot) {
-      wishList.innerHTML = "";
-      const data = snapshot.val();
-      const keys = Object.keys(data || {}).reverse(); // Terbaru di atas
-      keys.forEach((key) => {
-        const entry = data[key];
-        const el = document.createElement("div");
-        el.className = "entry";
-        el.innerHTML = `<strong>${entry.nama}</strong><br>${entry.pesan}`;
-        wishList.appendChild(el);
-      });
-    });
   </script>
 </body>
 </html>
