--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
     }
     .background-2 {
       background-image: url('background-2.jpg');
+      margin-top: 24px;
     }
     .background-3 {
       background-image: url('background-3.jpg');
+      margin-top: 24px;
     }
 
     .container {
