--- a/index.html
+++ b/index.html
@@ -283,5 +283,6 @@
       countdownElement.textContent = `${weeks} minggu ${days} hari ${hours} jam`;
     }, 1000);
   </script>
+  <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/dc70f11c5e31524aba7d13fccdb2572b.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
 </body>
 </html>
