--- a/index.html
+++ b/index.html
@@ -283,6 +283,16 @@
       countdownElement.textContent = `${weeks} minggu ${days} hari ${hours} jam`;
     }, 1000);
   </script>
-  <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/dc70f11c5e31524aba7d13fccdb2572b.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+<!-- Instagram Gallery -->
+<div class="container">
+  <h2>Galeri Instagram</h2>
+  <iframe src="http://lightwidget.com/widgets/dc70f11c5e31524aba7d13fccdb2572b.html"
+    scrolling="no"
+    allowtransparency="true"
+    class="lightwidget-widget"
+    style="width:100%;border:0;overflow:hidden;">
+  </iframe>
+  <script src="http://cdn.lightwidget.com/widgets/lightwidget.js"></script>
+</div>
 </body>
 </html>
