--- a/index.html
+++ b/index.html
@@ -282,17 +282,7 @@
       const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
       countdownElement.textContent = `${weeks} minggu ${days} hari ${hours} jam`;
     }, 1000);
-  </script>
-<!-- Instagram Gallery -->
-<div class="container">
-  <h2>Galeri Instagram</h2>
-  <iframe src="http://lightwidget.com/widgets/dc70f11c5e31524aba7d13fccdb2572b.html"
-    scrolling="no"
-    allowtransparency="true"
-    class="lightwidget-widget"
-    style="width:100%;border:0;overflow:hidden;">
-  </iframe>
-  <script src="http://cdn.lightwidget.com/widgets/lightwidget.js"></script>
-</div>
+<!-- SnapWidget -->
+<iframe src="https://snapwidget.com/embed/1100649" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:765px; height:510px" title="Posts from Instagram"></iframe>
 </body>
 </html>
