UBah layout bride groom atas bawah

--- a/index.html
+++ b/index.html
@@ -98,6 +98,17 @@
       max-width: 600px;
     }
     .spacer { height: 24px; }
+    .bride-groom-block {
+      text-align: center;
+      margin-bottom: 16px;
+    }
+    .bride-groom-block img {
+      width: 160px;
+      height: 160px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-bottom: 8px;
+    }
   </style>
 </head>
 <body>
@@ -118,20 +129,18 @@
     <div class="spacer"></div>
     <div class="container">
       <h2>Bride & Groom</h2>
-      <div style="display:flex; justify-content:center; flex-wrap:wrap; gap:20px; align-items:center;">
-        <div style="flex:1; min-width:220px; text-align:center;">
-          <img src="foto-fauzi.jpg" alt="Fauzi" style="width:160px; height:160px; object-fit:cover; border-radius:50%;">
-          <h3>Fauzi</h3>
-          <p>Putra dari<br> Bapak [Nama Ayah Fauzi] &<br> Ibu [Nama Ibu Fauzi]</p>
-        </div>
-        <div style="font-size:32px; color:#e75480;">&#10084;</div>
-        <div style="flex:1; min-width:220px; text-align:center;">
-          <img src="foto-liansky.jpg" alt="Liansky" style="width:160px; height:160px; object-fit:cover; border-radius:50%;">
-          <h3>Liansky</h3>
-          <p>Putri dari<br> Bapak [Nama Ayah Liansky] &<br> Ibu [Nama Ibu Liansky]</p>
-        </div>
+      <div class="bride-groom-block">
+        <img src="foto-fauzi.jpg" alt="Fauzi">
+        <h3>Fauzi</h3>
+        <p>Putra dari<br>Bapak [Nama Ayah Fauzi] &<br>Ibu [Nama Ibu Fauzi]</p>
+      </div>
+      <div class="bride-groom-block">
+        <img src="foto-liansky.jpg" alt="Liansky">
+        <h3>Liansky</h3>
+        <p>Putri dari<br>Bapak [Nama Ayah Liansky] &<br>Ibu [Nama Ibu Liansky]</p>
       </div>
     </div>
+  </div>
   </div>
   <div class="background-2">
     <div class="container">
