nama bride groom

--- a/index.html
+++ b/index.html
@@ -44,14 +44,16 @@
     </div>
     <div class="spacer"></div>
     <div class="container">
-      <h2>Bride & Groom</h2>
+     <h2>Bride & Groom</h2>
       <div class="bride-groom-block">
         <img src="foto-fauzi.jpg" alt="Fauzi">
         <h3>Fauzi</h3>
+        <p>Putra dari<br>Bapak [Nama Ayah Fauzi] &<br>Ibu [Nama Ibu Fauzi]</p>
       </div>
       <div class="bride-groom-block">
         <img src="foto-liansky.jpg" alt="Liansky">
         <h3>Liansky</h3>
+        <p>Putri dari<br>Bapak [Nama Ayah Liansky] &<br>Ibu [Nama Ibu Liansky]</p>
       </div>
     </div>
   </div>
