--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
     <div class="container">
      <h2>Bride & Groom</h2>
       <div class="bride-groom-block">
-        <img src="foto-fauzi.jpg" alt="Fauzi">
+        <img src="ff.png" alt="Fauzi">
         <h3>Fauzi</h3>
-        <p>Putra dari<br>Bapak [Nama Ayah Fauzi] &<br>Ibu [Nama Ibu Fauzi]</p>
+        <p>Putra pertama dari<br>Alm. Bapak Syafrudin &<br>Ibu [Nama Ibu Fauzi]</p>
       </div>
       <div class="bride-groom-block">
-        <img src="foto-liansky.jpg" alt="Liansky">
-        <h3>Liansky</h3>
+        <img src="cc.png" alt="Liansky">
+        <h3>Salsalbila Liansky Shania Putri</h3>
         <p>Putri dari<br>Bapak [Nama Ayah Liansky] &<br>Ibu [Nama Ibu Liansky]</p>
       </div>
     </div>
