--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Segoe UI', sans-serif; margin: 0; padding: 0; color: #333; background: #fff; }
+    body { font-family: 'Playfair Display', serif; margin: 0; padding: 0; color: #333; background: #fff; }
     .background-1, .background-2, .background-3 {
       background-size: cover; background-position: center top; background-repeat: no-repeat; padding: 24px 0;
     }
