--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
     </div>
     <div class="spacer"></div>
     <div class="container">
-      <h2>Bride & Groom</h2>
+      <h2>Kawula Penganten</h2>
       <div class="bride-groom-block">
-        <img src="foto-fauzi.jpg" alt="Fauzi">
+        <img src="ff.png" alt="Fauzi">
         <h3>Fauzi</h3>
         <p>Putra dari Bapak [Nama Ayah Fauzi] & Ibu [Nama Ibu Fauzi]</p>
       </div>
       <div class="bride-groom-block">
-        <img src="foto-liansky.jpg" alt="Liansky">
+        <img src="cc.png" alt="Liansky">
         <h3>Liansky</h3>
         <p>Putri dari Bapak [Nama Ayah Liansky] & Ibu [Nama Ibu Liansky]</p>
       </div>
@@ -108,12 +108,13 @@
       <div id="pagination"></div>
 
       <h2>Hadiah</h2>
+      <p>Doa restu Anda merupakan hadiah terbaik bagi kami. Namun, apabila ingin berbagi tanda kasih, Tanpa mengurangi rasa hormat dan untuk menghindari mubadzir. mohon cek link dibawah jika berniat untuk mengirimkan hadiah</p>
       <a href="https://www.giftster.com/list/Z7Ogt/" target="_blank" class="button">Lihat Gift List</a>
       <div class="qr">
-        <p>QR Code Fauzi</p>
-        <img src="qr-fauzi.png" alt="QR Code Fauzi">
-        <p>QR Code Liansky</p>
-        <img src="qr-liansky.png" alt="QR Code Liansky">
+        
+        <p>Untuk kemudahan berbagi kebahagiaan, kami sertakan nomor rekening di bawah ini.</p>
+        <p>BCA a/n Salsabila Liansky</p>
+        <p>2530029690</p>
       </div>
 
       <h2>Galeri Instagram</h2>
