--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <p>10.00 – 12.00 WIB | Rumah Fauzi - Jl. Contoh Alamat No.123</p>
       <h3>Resepsi Sesi 2</h3>
       <p>13.00 – 15.00 WIB | Rumah Fauzi - Jl. Contoh Alamat No.123</p>
-      <p><strong>Catatan:</strong> Harap lepas sepatu sebelum memasuki area acara.</p>
+      <h2><strong>Dikarenakan Acara Ramah tamah akan dilangsungkan di Aula Masjid, tanpa mengurangi rasa hormat, Para tamu undangan diwajibkan untuk melepas alas kaki dan meletakkan alas kaki di loker yang tersedia saat memasuki area masjid. mohon kesediannya untuk menggunakan pakaian yang nyaman dan sesuai</strong></h2>
     </div>
   </div>
 
@@ -107,17 +107,19 @@
       <div id="wishList"></div>
       <div id="pagination"></div>
 
-      <h2>Hadiah</h2>
-      <p>Doa restu Anda merupakan hadiah terbaik bagi kami. Namun, apabila ingin berbagi tanda kasih, Tanpa mengurangi rasa hormat dan untuk menghindari mubadzir. mohon cek link dibawah jika berniat untuk mengirimkan hadiah</p>
-      <a href="https://www.giftster.com/list/Z7Ogt/" target="_blank" class="button">Lihat Gift List</a>
+      <h2>Pangajab Tanda Asih</h2>
+      <p>Doa restu Anda merupakan hadiah terbaik bagi kami. Namun, apabila ingin berbagi tanda kasih, Tanpa mengurangi rasa hormat dan untuk menghindari mubadzir, mohon cek link dibawah dahulu jika berniat untuk mengirimkan hadiah</p>
+      <a href="https://www.giftster.com/list/Z7Ogt/" target="_blank" class="button"> Lihat Daftar Gift </a>
       <div class="qr">
         
-        <p>Untuk kemudahan berbagi kebahagiaan, kami sertakan nomor rekening di bawah ini.</p>
-        <p>BCA a/n Salsabila Liansky</p>
-        <p>2530029690</p>
+        <p>Untuk kemudahan berbagi kebahagiaan, kami sertakan pula nomor rekening di bawah ini.</p>
+        <h3>BCA a/n Salsabila Liansky</h3>
+        <h3>2530029690</h3>
       </div>
 
-      <h2>Galeri Instagram</h2>
+      
+
+      <h2>Seketar Kenangan</h2>
       <iframe src="https://snapwidget.com/embed/1100649" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:510px;" title="Instagram Gallery"></iframe>
     </div>
   </div>
