--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
       <p>10.00 – 12.00 WIB | Rumah Fauzi - Jl. Contoh Alamat No.123</p>
       <h3>Resepsi Sesi 2</h3>
       <p>13.00 – 15.00 WIB | Rumah Fauzi - Jl. Contoh Alamat No.123</p>
-      <h2><strong>Dikarenakan Acara Ramah tamah akan dilangsungkan di Aula Masjid, tanpa mengurangi rasa hormat, Para tamu undangan diwajibkan untuk melepas alas kaki dan meletakkan alas kaki di loker yang tersedia saat memasuki area masjid. mohon kesediannya untuk menggunakan pakaian yang nyaman dan sesuai</strong></h2>
+      <h2><strong>Tata Sandhang</strong></h2>
+      <p>Dikarenakan Acara Ramah tamah akan dilangsungkan di Aula Masjid, tanpa mengurangi rasa hormat, Para tamu undangan diwajibkan untuk melepas alas kaki dan meletakkan alas kaki di loker yang tersedia saat memasuki area masjid. mohon kesediannya untuk menggunakan pakaian yang nyaman dan sesuai<p2>
     </div>
   </div>
 
