--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
       <p>10.00 – 12.00 WIB | Rumah Fauzi - Jl. Contoh Alamat No.123</p>
       <h3>Resepsi Sesi 2</h3>
       <p>13.00 – 15.00 WIB | Rumah Fauzi - Jl. Contoh Alamat No.123</p>
+      <div class="spacer-md"></div>
       <h2><strong>Tata Sandhang</strong></h2>
       <p>Dikarenakan Acara Ramah tamah akan dilangsungkan di Aula Masjid, tanpa mengurangi rasa hormat, Para tamu undangan diwajibkan untuk melepas alas kaki dan meletakkan alas kaki di loker yang tersedia saat memasuki area masjid. mohon kesediannya untuk menggunakan pakaian yang nyaman dan sesuai<p2>
     </div>
@@ -118,7 +119,7 @@
         <h3>2530029690</h3>
       </div>
 
-      
+      <div class="spacer-md"></div>
 
       <h2>Seketar Kenangan</h2>
       <iframe src="https://snapwidget.com/embed/1100649" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:510px;" title="Instagram Gallery"></iframe>
@@ -188,7 +189,7 @@
     const pagination = document.getElementById("pagination");
     let wishes = [];
     let currentPage = 1;
-    const wishesPerPage = 10;
+    const wishesPerPage = 6;
 
     function loadWishes(page) {
       db.ref('wishes').once('value', (snapshot) => {
