--- a/index.html
+++ b/index.html
@@ -120,6 +120,13 @@
       </div>
 
       <div class="spacer-md"></div>
+      <div class="spacer-md"></div>
+      <div class="spacer-md"></div>
+      <div class="spacer-md"></div>
+      <div class="spacer-md"></div>
+      <div class="spacer-md"></div>
+      <div class="spacer-md"></div>
+      <div class="spacer-md"></div>
 
       <h2>Seketar Kenangan</h2>
       <iframe src="https://snapwidget.com/embed/1100649" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:510px;" title="Instagram Gallery"></iframe>
