--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     #pagination button { margin: 4px; padding: 6px 12px; border-radius: 6px; border: 1px solid #ccc; cursor: pointer; }
     .entry { background: #f7f7f7; padding: 12px; margin: 8px auto; border-radius: 8px; width: 90%; max-width: 600px; }
     .spacer { height: 24px; }
+    .spacer-sm { height: 16px; }
+    .spacer-md { height: 24px; }
+    .spacer-lg { height: 48px; }
     .bride-groom-block { text-align: center; margin-bottom: 16px; }
     .bride-groom-block img { width: 160px; height: 160px; object-fit: cover; border-radius: 50%; margin-bottom: 8px; }
   </style>
@@ -119,12 +122,6 @@
         <h3>2530029690</h3>
       </div>
 
-      <div class="spacer-md"></div>
-      <div class="spacer-md"></div>
-      <div class="spacer-md"></div>
-      <div class="spacer-md"></div>
-      <div class="spacer-md"></div>
-      <div class="spacer-md"></div>
       <div class="spacer-md"></div>
       <div class="spacer-md"></div>
 
