--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </div>
     <div class="spacer"></div>
       <div class="container">
-      <h2><strong>Tata Sandhang</strong></h2>
+      <h2>Tata Sandhang</h2>
       <p>Dikarenakan Acara Ramah tamah akan dilangsungkan di Aula Masjid, tanpa mengurangi rasa hormat, Para tamu undangan diwajibkan untuk melepas alas kaki dan meletakkan alas kaki di loker yang tersedia saat memasuki area masjid. mohon kesediannya untuk menggunakan pakaian yang nyaman dan sesuai<p2>
     </div>
   </div>
