--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
       <div class="qr">
         
         <p>Untuk kemudahan berbagi kebahagiaan, kami sertakan pula nomor rekening di bawah ini.</p>
-        <h3>BCA a/n Salsabila Liansky</h3>
-        <h3>2530029690</h3>
+        <h2>BCA a/n Salsabila Liansky 2530029690</h2>
+        <h2>Mandiri a/n Salsabila Liansky 1650002541713</h2>
       </div>
 
       <div class="spacer-md"></div>
