--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
       <div class="qr">
         
         <p>Untuk kemudahan berbagi kebahagiaan, kami sertakan pula nomor rekening di bawah ini.</p>
-        <h2>BCA a/n Salsabila Liansky 2530029690</h2>
-        <h2>Mandiri a/n Salsabila Liansky 1650002541713</h2>
+        <p><strong>BCA a/n Salsabila Liansky 2530029690 </strong></p>
+        <p><strong>Mandiri a/n Salsabila Liansky 1650002541713</strong></h2>
       </div>
 
       <div class="spacer-md"></div>
