--- a/index.html
+++ b/index.html
@@ -79,10 +79,8 @@
       <p>Dengan penuh kebahagiaan, kami mengundang Bapak/Ibu/Saudara/i untuk hadir dalam acara pernikahan kami:</p>
       <h3>Akad Nikah</h3>
       <p>27 Juli 2025 | 07.00 – 09.00 WIB | Masjid Baiturrahman Pondok Pinang <a href="https://maps.app.goo.gl/BbcKU5Lmzu8Tw4wJ7" target="_blank">Lihat Lokasi</a></p>
-      <h3>Resepsi Sesi 1</h3>
+      <h3>Syukuran Pernikahan</h3>
       <p>10.00 – 12.00 WIB | Rumah Fauzi - Jl. Contoh Alamat No.123</p>
-      <h3>Resepsi Sesi 2</h3>
-      <p>13.00 – 15.00 WIB | Rumah Fauzi - Jl. Contoh Alamat No.123</p>
     </div>
     <div class="spacer"></div>
       <div class="container">
