--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
       </form>
       <div id="wishList"></div>
       <div id="pagination"></div>
-
+    </div>
+    <div class="spacer"></div>
+        <div class="container">
       <h2>Pangajab Tanda Asih</h2>
       <p>Doa restu Anda merupakan hadiah terbaik bagi kami. Namun, apabila ingin berbagi tanda kasih, Tanpa mengurangi rasa hormat dan untuk menghindari mubadzir, mohon cek link dibawah dahulu jika berniat untuk mengirimkan hadiah</p>
       <a href="https://www.giftster.com/list/Z7Ogt/" target="_blank" class="button"> Lihat Daftar Gift </a>
@@ -126,7 +128,6 @@
         <p><strong>Mandiri a/n Salsabila Liansky 1650002541713</strong></h2>
       </div>
 
-      <div class="spacer-md"></div>
       <div class="spacer-md"></div>
 
       <h2>Seketar Kenangan</h2>
