--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
       <div class="qr">
         
         <p>Untuk kemudahan berbagi kebahagiaan, kami sertakan pula nomor rekening di bawah ini.</p>
-        <p><strong>BCA a/n Salsabila Liansky 2530029690 </strong></p>
+        <p><strong>BCA a/n Salsabila Liansky 
+          2530029690 </strong></p>
         <p><strong>Mandiri a/n Salsabila Liansky 1650002541713</strong></h2>
       </div>
 
