--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     #pagination button { margin: 4px; padding: 6px 12px; border-radius: 6px; border: 1px solid #ccc; cursor: pointer; }
     .entry { background: #f7f7f7; padding: 12px; margin: 8px auto; border-radius: 8px; width: 90%; max-width: 600px; }
     .spacer { height: 24px; }
-    .spacer-sm { height: 16px; }
+    .spacer-sm { height: 12px; }
     .spacer-md { height: 24px; }
     .spacer-lg { height: 48px; }
     .bride-groom-block { text-align: center; margin-bottom: 16px; }
@@ -50,7 +50,7 @@
     <div class="container">
       <h1 class="dynamic-title">
         <span style="font-size: 36px; font-weight: bold;">Fauzi</span>
-        <span class="amp" style="font-size: 24px;">&</span>
+        <span class="amp" style="font-size: 12px;">&</span>
         <span style="font-size: 36px; font-weight: bold;">Liansky</span>
       </h1>
       <h3>Pernikahan - 27 Juli 2025</h3>
@@ -62,12 +62,12 @@
       <div class="bride-groom-block">
         <img src="ff.png" alt="Fauzi">
         <h3>Fauzi</h3>
-        <p>Putra dari Bapak [Nama Ayah Fauzi] & Ibu [Nama Ibu Fauzi]</p>
+        <p>Putra dari Alm. Bapak Fauzi & Ibu Rumiyati</p>
       </div>
       <div class="bride-groom-block">
         <img src="cc.png" alt="Liansky">
-        <h3>Liansky</h3>
-        <p>Putri dari Bapak [Nama Ayah Liansky] & Ibu [Nama Ibu Liansky]</p>
+        <h3>Salsabila Liansky Shania Putri</h3>
+        <p>Putri dari Bapak M Ecky Ridwan Baso & Ibu Aprilia Muslimah Istuarti</p>
       </div>
     </div>
   </div>
@@ -78,9 +78,16 @@
       <h2>Undangan</h2>
       <p>Dengan penuh kebahagiaan, kami mengundang Bapak/Ibu/Saudara/i untuk hadir dalam acara pernikahan kami:</p>
       <h3>Akad Nikah</h3>
-      <p>27 Juli 2025 | 07.00 – 09.00 WIB | Masjid Baiturrahman Pondok Pinang <a href="https://maps.app.goo.gl/BbcKU5Lmzu8Tw4wJ7" target="_blank">Lihat Lokasi</a></p>
+      <p>27 Juli 2025 | 07.00 – 09.00 WIB</p>
+            <div class="spacer-sm"></div>
+      <p>Masjid Baiturrahman Pondok Pinang.
+        Kec. Kby. Lama, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta
+        <a href="https://maps.app.goo.gl/BbcKU5Lmzu8Tw4wJ7" target="_blank">Lihat Lokasi</a></p>
       <h3>Syukuran Pernikahan</h3>
-      <p>10.00 – 12.00 WIB | Rumah Fauzi - Jl. Contoh Alamat No.123</p>
+      <p>27 Juli 2025 10.30 – 12.00 WIB</p>
+      <p>Masjid Baiturrahman Pondok Pinang.
+        Kec. Kby. Lama, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta
+        <a href="https://maps.app.goo.gl/BbcKU5Lmzu8Tw4wJ7" target="_blank">Lihat Lokasi</a></p>
     </div>
     <div class="spacer"></div>
       <div class="container">
