--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="bride-groom-block">
         <img src="ff.png" alt="Fauzi">
         <h3>Fauzi</h3>
-        <p>Putra dari Alm. Bapak Fauzi & Ibu Rumiyati</p>
+        <p>Putra dari Alm. Bapak Syafrudin & Ibu Rumiyati</p>
       </div>
       <div class="bride-groom-block">
         <img src="cc.png" alt="Liansky">
