--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
         <a href="https://maps.app.goo.gl/BbcKU5Lmzu8Tw4wJ7" target="_blank">Lihat Lokasi</a></p>
         <div class="spacer-sm"></div>
 
-      <h3>Syukuran Pernikahan</h3>
+      <strong><h3>Syukuran Pernikahan</h3>
       <p>27 Juli 2025 10.30 – 12.00 WIB</p>
       <p>Masjid Baiturrahman Pondok Pinang.
         Kec. Kby. Lama, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta
-        <a href="https://maps.app.goo.gl/BbcKU5Lmzu8Tw4wJ7" target="_blank">Lihat Lokasi</a></p>
+        <a href="https://maps.app.goo.gl/BbcKU5Lmzu8Tw4wJ7" target="_blank">Lihat Lokasi</a></p></strong>
     </div>
     <div class="spacer"></div>
       <div class="container">
       <h2>Tata Sandhang</h2>
-      <p>Dikarenakan Acara Ramah tamah akan dilangsungkan di Aula Masjid, tanpa mengurangi rasa hormat, Para tamu undangan diwajibkan untuk melepas alas kaki dan meletakkan alas kaki di loker yang tersedia saat memasuki area masjid. mohon kesediannya untuk menggunakan pakaian yang nyaman dan sesuai<p2>
+      <p>Dikarenakan Acara syukuran akan dilangsungkan di Aula Masjid, tanpa mengurangi rasa hormat, Para tamu undangan akan diwajibkan untuk melepas alas kaki dan meletakkan alas kaki di loker yang tersedia saat memasuki area masjid. mohon kesediannya untuk menggunakan pakaian yang nyaman dan sesuai<p2>
     </div>
   </div>
 
@@ -108,7 +108,7 @@
           <option value="Tidak Hadir">Tidak Hadir</option>
         </select>
 <select id="rsvpJumlah" required>
-  <option value="" disabled selected>Jumlah Orang Termasuk Anda</option>
+  <option value="" disabled selected>Jumlah Orang</option>
   <option value="1">1 Orang</option>
   <option value="2">2 Orang</option>
 </select>
