--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@
       <div class="bride-groom-block">
         <img src="ff.png" alt="Fauzi">
         <h3>Fauzi</h3>
-        <p>Putra dari Alm. Bapak Syafrudin & Ibu Rumiyati</p>
+        <p>Putra dari Alm. Bapak Syafrudin</p>
+        <p>& Ibu Rumiyati</p>
       </div>
       <div class="bride-groom-block">
         <img src="cc.png" alt="Liansky">
         <h3>Salsabila Liansky Shania Putri</h3>
-        <p>Putri dari Bapak M Ecky Ridwan Baso & Ibu Aprilia Muslimah Istuarti</p>
+        <p>Putri dari Bapak Ecky M Ridwan Baso</p>
+        <p>& Ibu Aprilia Muslimah Istuarti</p>
       </div>
     </div>
   </div>
