--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         <a href="https://maps.app.goo.gl/BbcKU5Lmzu8Tw4wJ7" target="_blank">Lihat Lokasi</a></p>
         <div class="spacer-sm"></div>
 
-      <strong><h3>Syukuran Pernikahan</h3>
-      <p>27 Juli 2025 10.30 – 12.00 WIB</p>
+      <strong><h3>Syukuran Pernikahan</h3></strong>
+     <strong><p>27 Juli 2025 10.30 – 12.00 WIB</p>
       <p>Masjid Baiturrahman Pondok Pinang.
         Kec. Kby. Lama, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta
         <a href="https://maps.app.goo.gl/BbcKU5Lmzu8Tw4wJ7" target="_blank">Lihat Lokasi</a></p></strong>
@@ -95,7 +95,9 @@
     <div class="spacer"></div>
       <div class="container">
       <h2>Tata Sandhang</h2>
-      <p>Dikarenakan Acara syukuran akan dilangsungkan di Aula Masjid, tanpa mengurangi rasa hormat, Para tamu undangan akan diwajibkan untuk melepas alas kaki dan meletakkan alas kaki di loker yang tersedia saat memasuki area masjid. mohon kesediannya untuk menggunakan pakaian yang nyaman dan sesuai<p2>
+      <p>Dikarenakan Acara syukuran akan dilangsungkan di Aula Masjid, dengan tanpa mengurangi rasa hormat</p>
+        <p>Para tamu undangan akan diwajibkan untuk melepas alas kaki dan meletakkan alas kaki di loker yang tersedia saat memasuki area masjid</p>
+        <p>Mohon kesediannya untuk menggunakan pakaian yang nyaman dan sopan</p>
     </div>
   </div>
 
@@ -134,9 +136,10 @@
       <div class="qr">
         
         <p>Untuk kemudahan berbagi kebahagiaan, kami sertakan pula nomor rekening di bawah ini.</p>
-        <p><strong>BCA a/n Salsabila Liansky 
-          2530029690 </strong></p>
-        <p><strong>Mandiri a/n Salsabila Liansky 1650002541713</strong></h2>
+        <p><strong>BCA a/n Salsabila Liansky</strong></p> 
+        <p><strong>2530029690 </strong></p>
+        <p><strong>Mandiri a/n Salsabila Liansky</strong></p>
+        <p><strong>1650002541713</strong></p>
       </div>
 
       <div class="spacer-md"></div>
