--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     <source src="musik-latar.mp3" type="audio/mpeg">
   </audio>
   <button id="music-toggle">🔊</button>
+  <p style="text-align:center; font-size: 14px; color: #666; margin-top: 8px;">Ketuk tombol 🔊 di pojok kanan bawah untuk memutar musik</p>
+
 
   <!-- Background 1 -->
   <div class="background-1">
