--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
      <strong><p>27 Juli 2025 10.30 – 12.00 WIB</p>
       <p>Masjid Baiturrahman Pondok Pinang.
         Kec. Kby. Lama, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta
-        <a href="https://maps.app.goo.gl/BbcKU5Lmzu8Tw4wJ7" target="_blank">Lihat Lokasi</a></p></strong>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.4245398940833!2d106.779469!3d-6.207604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f176b68bdeff%3A0x8e99b65e82d9fbe!2sMasjid%20Baiturrahman%20Pondok%20Pinang!5e0!3m2!1sen!2sid!4v1719392000000!5m2!1sen!2sid" width="100%" height="300" style="border:0; border-radius:12px; margin-top:12px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div class="spacer"></div>
       <div class="container">
