--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Undangan Pernikahan Fauzi & Liansky</title>
+  <title>Undangan Pernikahan Liansky & Fauzi</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
@@ -10,6 +10,7 @@
   <style>
     body { font-family: 'Segoe UI', sans-serif; margin: 0; padding: 0; color: #333; background: #fff; }
     h1, h2, h3 { font-family: 'Playfair Display', serif; text-align: center; }
+ 
     .container, .container p, .container div, .container form, .container ul, .container li { text-align: center; }
     input, textarea, select, button, #pagination button {
       text-align: left;
@@ -31,11 +32,11 @@
     #music-toggle { position: fixed; bottom: 20px; right: 20px; z-index: 1000; background: rgba(255,255,255,0.7); border: none; border-radius: 50%; width: 40px; height: 40px; font-size: 18px; cursor: pointer; }
     #pagination button { margin: 4px; padding: 6px 12px; border-radius: 6px; border: 1px solid #ccc; cursor: pointer; }
     .entry { background: #f7f7f7; padding: 12px; margin: 8px auto; border-radius: 8px; width: 90%; max-width: 600px; }
-    .spacer { height: 24px; }
+    .spacer { height: 12px; }
     .spacer-sm { height: 12px; }
     .spacer-md { height: 24px; }
     .spacer-lg { height: 48px; }
-    .bride-groom-block { text-align: center; margin-bottom: 16px; }
+    .bride-groom-block { text-align: center; margin-bottom: 8px; }
     .bride-groom-block img { width: 160px; height: 160px; object-fit: cover; border-radius: 50%; margin-bottom: 8px; }
   </style>
 </head>
@@ -51,27 +52,27 @@
   <div class="background-1">
     <div class="container">
       <h1 class="dynamic-title">
-        <span style="font-size: 36px; font-weight: bold;">Fauzi</span>
-        <span class="amp" style="font-size: 20px;">&</span>
         <span style="font-size: 36px; font-weight: bold;">Liansky</span>
+        <span class="amp" style="font-size: 20px;">&</span>
+        <span style="font-size: 36px; font-weight: bold;">Fauzi</span>
       </h1>
       <h3>Pernikahan - 27 Juli 2025</h3>
       <div class="countdown" id="countdown" style="font-weight:bold;">Menghitung waktu...</div>
     </div>
     <div class="spacer"></div>
     <div class="container">
-      <h2>Kawula Penganten</h2>
+      <strong><h2>Kawula Penganten</h2></strong>
       <div class="bride-groom-block">
-        <img src="ff.png" alt="Fauzi">
-        <h3>Fauzi</h3>
-        <p>Putra dari Alm. Bapak Syafrudin</p>
-        <p>& Ibu Rumiyati</p>
+        <img src="cc.png" alt="Fauzi">
+        <h3>Salsabila Liansky Shania Putri, S.I.Kom</h3>
+        <p>Putri pertama dari Bapak Ir. Ecky Mohammad Ridwan Baso 
+          & Ibu Aprilia Muslimah Istuarti</p>
       </div>
       <div class="bride-groom-block">
-        <img src="cc.png" alt="Liansky">
-        <h3>Salsabila Liansky Shania Putri</h3>
-        <p>Putri dari Bapak Ecky M Ridwan Baso</p>
-        <p>& Ibu Aprilia Muslimah Istuarti</p>
+        <img src="ff.png" alt="Liansky">
+        <h3>Fauzi, S.Ars.L</h3>
+        <p>Putra pertama dari Alm. Bapak Syafrudin
+          & Ibu Rumiyati</p>
       </div>
     </div>
   </div>
@@ -79,34 +80,36 @@
   <!-- Background 2 -->
   <div class="background-2">
     <div class="container">
-      <h2>Undangan</h2>
+      <strong><h2>Undangan</h2></strong>
       <p>Dengan penuh kebahagiaan, kami mengundang Bapak/Ibu/Saudara/i untuk hadir dalam acara pernikahan kami:</p>
       <h3>Akad Nikah</h3>
-      <p>27 Juli 2025 | 07.30 – 10.00 WIB</p>
+      <p>📅 27 Juli 2025</p>
+       <p>⏰ 07.30 - 10.00 WIB</p>
       <p>Masjid Baiturrahman Pondok Pinang.
         Kec. Kby. Lama, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta
         <a href="https://maps.app.goo.gl/BbcKU5Lmzu8Tw4wJ7" target="_blank">Lihat Lokasi</a></p>
         <div class="spacer-sm"></div>
 
       <strong><h3>Syukuran Pernikahan</h3></strong>
-     <strong><p>27 Juli 2025 10.30 – 12.00 WIB</p>
-      <p>Masjid Baiturrahman Pondok Pinang.
+    <p>📅 27 Juli 2025</p>
+       <p>⏰ 10.30 - 12.00 WIB</p>
+      <p>Aula Masjid Baiturrahman Pondok Pinang.
         Kec. Kby. Lama, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.4245398940833!2d106.779469!3d-6.207604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f176b68bdeff%3A0x8e99b65e82d9fbe!2sMasjid%20Baiturrahman%20Pondok%20Pinang!5e0!3m2!1sen!2sid!4v1719392000000!5m2!1sen!2sid" width="100%" height="300" style="border:0; border-radius:12px; margin-top:12px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.4245398940833!2d106.779469!3d-6.207604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f176b68bdeff%3A0x8e99b65e82d9fbe!2sMasjid%20Baiturrahman%20Pondok%20Pinang!5e0!3m2!1sen!2sid!4v1719392000000!5m2!1sen!2sid" width="100%" height="300" style="border:0; border-radius:12px; margin-top:12px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div class="spacer"></div>
       <div class="container">
-      <h2>Tata Sandhang</h2>
-      <p>Dikarenakan Acara syukuran akan dilangsungkan di Aula Masjid, dengan tanpa mengurangi rasa hormat</p>
-        <p>Para tamu undangan akan diwajibkan untuk melepas alas kaki dan meletakkan alas kaki di loker yang tersedia saat memasuki area masjid</p>
-        <p>Mohon kesediannya untuk menggunakan pakaian yang nyaman dan sopan</p>
+     <h2>Tata Sandhang</h2>
+      <p>Acara syukuran akan diselenggarakan di Aula Masjid berbatas suci. Dengan penuh hormat, kami mohon kesediaan para undangan untuk melepas alas kaki dan menyimpannya di loker yang tersedia sebelum memasuki area masjid.
+</p>
+        <p>Kami juga mengimbau untuk mengenakan pakaian yang nyaman dan sopan serta alas kaki yang mudah dilepas dan disimpan. Terima kasih atas pengertiannya.</p>
     </div>
   </div>
 
   <!-- Background 3 -->
   <div class="background-3">
     <div class="container">
-      <h2>Konfirmasi Kehadiran (RSVP)</h2>
+      <strong><h2>Konfirmasi Kehadiran (RSVP)</h2></strong>
       <form id="rsvpForm">
         <input type="text" id="rsvpNama" placeholder="Nama Anda" required>
         <select id="rsvpStatus">
@@ -121,7 +124,7 @@
         <button type="submit">Kirim</button>
       </form>
 
-      <h2>Ucapan & Doa</h2>
+      <strong><h2>Ucapan & Doa</h2></strong>
       <form id="wishForm">
         <input type="text" id="wishNama" placeholder="Nama Anda" required>
         <textarea id="wishPesan" rows="3" placeholder="Ucapan dan Doa" required></textarea>
@@ -133,7 +136,7 @@
     <div class="spacer"></div>
         <div class="container">
       <h2>Pangajab Tanda Asih</h2>
-      <p>Doa restu Anda merupakan hadiah terbaik bagi kami. Namun, apabila ingin berbagi tanda kasih, Tanpa mengurangi rasa hormat dan untuk menghindari mubadzir, mohon cek link dibawah dahulu jika berniat untuk mengirimkan hadiah</p>
+      <p>Doa restu Anda merupakan hadiah terbaik bagi kami. Namun, apabila ingin berbagi tanda kasih, tanpa mengurangi rasa hormat dan untuk menghindari mubadzir, mohon cek link dibawah dahulu jika berniat untuk mengirimkan hadiah</p>
       <a href="https://www.giftster.com/list/Z7Ogt/" target="_blank" class="button"> Lihat Daftar Gift </a>
       <div class="qr">
         
@@ -146,7 +149,7 @@
 
       <div class="spacer-md"></div>
 
-      <h2>Seketar Kenangan</h2>
+      <strong><h2>Seketar Kenangan</h2></strong>
       <iframe src="https://snapwidget.com/embed/1100649" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:510px;" title="Instagram Gallery"></iframe>
     </div>
   </div>
