--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     .background-1 { background-image: url('background-1.jpg'); }
     .background-2 { background-image: url('background-2.jpg'); margin-top: 24px; }
     .background-3 { background-image: url('background-3.jpg'); margin-top: 24px; }
+    .background-4 { background-image: url('background-3.jpg'); margin-top: 24px; }
+    .background-5 { background-image: url('background-3.jpg'); margin-top: 24px; }
     .container { max-width: 700px; margin: auto; padding: 24px; background: rgba(255, 255, 255, 0.6); border-radius: 16px; }
     .dynamic-title { font-family: 'Playfair Display', serif; font-size: 36px; display: flex; flex-direction: column; align-items: center; }
     .dynamic-title .amp { font-size: 24px; }
@@ -49,7 +51,7 @@
 
 
   <!-- Background 1 -->
-  <div class="background-1">
+  <div class="background-5">
     <div class="container">
       <h1 class="dynamic-title">
         <span style="font-size: 36px; font-weight: bold;">Liansky</span>
@@ -60,6 +62,7 @@
       <div class="countdown" id="countdown" style="font-weight:bold;">Menghitung waktu...</div>
     </div>
     <div class="spacer"></div>
+  <div class="background-1">
     <div class="container">
       <strong><h2>Kawula Penganten</h2></strong>
       <div class="bride-groom-block">
