--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
       <div class="countdown" id="countdown" style="font-weight:bold;">Menghitung waktu...</div>
     </div>
     <div class="spacer"></div>
+   </div>
+    
   <div class="background-1">
     <div class="container">
       <strong><h2>Kawula Penganten</h2></strong>
