--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
       <div id="pagination"></div>
     </div>
     <div class="spacer"></div>
+    </div>
+         <div class="background-4">
         <div class="container">
       <h2>Pangajab Tanda Asih</h2>
       <p>Doa restu Anda merupakan hadiah terbaik bagi kami. Namun, apabila ingin berbagi tanda kasih, tanpa mengurangi rasa hormat dan untuk menghindari mubadzir, mohon cek link dibawah dahulu jika berniat untuk mengirimkan hadiah</p>
